fix(navbar): fixed navbar z-index
navbar was not computing its z-index property set in root theme css. I don't know why, but i set an
inline style with z-index and it fixed it.

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -25,3 +25,7 @@ body {
     )
     rgb(var(--background-start-rgb));
 }
+
+.navbar {
+  z-index: 30 !important;
+}
